<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/playoff_field"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout style="@style/LayoutButtons">

                <TextView
                    android:id="@+id/teamA"
                    style="@style/TextViewTeam"
                    android:text="@string/team_a" />

                <TextView
                    android:id="@+id/scoreA"
                    style="@style/TextViewScore" />

                <Button
                    android:id="@+id/add1A"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_PAT" />

                <Button
                    android:id="@+id/add2A"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_SAFETY" />

                <Button
                    android:id="@+id/add3A"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_FG" />

                <Button
                    android:id="@+id/add6A"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_TD" />
            </LinearLayout>

            <LinearLayout style="@style/LayoutButtons">

                <TextView
                    android:id="@+id/teamB"
                    style="@style/TextViewTeam"
                    android:text="@string/team_b" />

                <TextView
                    android:id="@+id/scoreB"
                    style="@style/TextViewScore" />

                <Button
                    android:id="@+id/add1B"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_PAT" />

                <Button
                    android:id="@+id/add2B"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_SAFETY" />

                <Button
                    android:id="@+id/add3B"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_FG" />

                <Button
                    android:id="@+id/add6B"
                    style="@style/ButtonScore"
                    android:onClick="addPoints"
                    android:text="@string/points_TD" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="reset"
            android:text="@string/reset" />
    </LinearLayout>
</ScrollView>